# etv-station

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  Dockerfile  README.md  package.json
.claude/skills/: check-channels.md  check-epg.md  frame-grab.md  read-logs.md
crates/etv-overlay/: Cargo.toml
crates/etv-overlay/assets/fonts/: README.md
crates/etv-overlay/fixtures/: channel_corner_rotate.toml  channel_dynamic.toml  channel_pulse.toml  channel_watermark.toml  text_banner.toml  watermark.toml  watermark_fade.toml
crates/etv-overlay/fixtures/scripts/: corner_rotate.rhai  fade.rhai  now_and_next.rhai  now_playing.rhai  pulse_watermark.rhai  up_next.rhai  watermark.rhai
crates/etv-overlay/src/: fifo_writer.rs  lib.rs  overlay_spec.rs  program_context.rs  rhai_engine.rs  vello_renderer.rs
crates/etv-overlay/tests/: render_smoke.rs
crates/etv-query-test/: Cargo.toml
crates/etv-query-test/cases/: 01-tos-marathon.toml  02-multi-trek.toml  03-tng-seasons-3-5.toml  04-bumper-block.toml  05-dragon-ball-chronological.toml  06-trek-in-universe.toml
crates/etv-query-test/src/: cache.rs  cases.rs  cel_eval.rs  fs_catalog.rs  main.rs  normalize.rs  output.rs  plex.rs
crates/etv-station/: Cargo.toml
crates/etv-station/src/: anchor.rs  atomic.rs  constrain.rs  daemon.rs  duration.rs  emit.rs  errors.rs  history.rs  lib.rs  main.rs  overlay_supervisor.rs  pattern.rs  resolve.rs  resume.rs  rule.rs  scan.rs  score.rs  tautulli.rs  tz.rs
crates/etv-station/src/catalog/: error.rs  identity.rs  mod.rs  model.rs  order.rs  query.rs  schema.rs
crates/etv-station/src/catalog/ingest/: fs.rs  mod.rs  plex.rs
crates/etv-station/src/config/: block.rs  channel.rs  constraints.rs  entry.rs  filter.rs  item.rs  load.rs  mod.rs  mode.rs  order.rs  pool.rs  rule.rs  source.rs  station.rs  validate.rs
crates/etv-station/tests/: dragonball_sample.rs  foryou_sample.rs  kungfu_sample.rs  lotr_sample.rs  lotr_theatrical_sample.rs  marathon_sample.rs  scorer_plugin.rs  studio_brand_sample.rs  trending_mix_sample.rs  trending_shuffle_sample.rs
docs/: CONTEXT.md  PRD.md  architecture.md  file-map.md  index.md  roadmap.md  schema.md
docs/.vitepress/: config.mts
docs/adr/: 0001-reload-generation-revert.md  0002-scorer-plugin-replaces-a-pool-expr.md  0003-one-file-per-chunk-honest-names.md
examples/: station.toml  station.yaml
examples/channels/: diehard.toml  dragonball.yaml  ghibli.yaml  lavfi-test.toml  lavfi-test.yaml  lotr-theatrical.yaml  lotr.toml  lotr.yaml  trending-shuffle.yaml
examples/etv-next/: channel.json  channel2.json  lineup.json  lineup.json.tpl  normalization.default.json  presentation.example.json
examples/overlays/: pierce_logo.toml  trending_logo.toml
examples/plugins/: taste-engine.rhai
examples/samples/: dragonball.yaml  foryou.yaml  ghibli.yaml  kungfu.yaml  lotr-theatrical.yaml  lotr.yaml  marathon.yaml  trending-mix.yaml  trending-shuffle.yaml
tools/: dev-procs.sh  dev-run.sh  frame-grab.sh  kill-dev.sh  overlay-still.sh  overlay-test.sh  query.sh  render-etv-next.py  render-lineup.sh  validate-streams.sh
