[workspace]
members = ["crates/etv-station"]
exclude = ["etv-next"]
resolver = "3"

[workspace.dependencies]
ersatztv-playout = { path = "etv-next/crates/ersatztv-playout" }
clap = { version = "4", features = ["derive"] }
humantime-serde = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "macros", "parsing", "serde"] }
time-tz = "2"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread", "signal", "sync", "time"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tempfile = "3"
