[workspace]
members = ["crates/etv-station", "crates/etv-query-test"]
exclude = ["etv-next"]
resolver = "3"

[workspace.dependencies]
ersatztv-playout = { path = "etv-next/crates/ersatztv-playout" }
etv-station = { path = "crates/etv-station" }
cel = { version = "0.13", features = ["json"] }
clap = { version = "4", features = ["derive"] }
glob = "0.3"
humantime-serde = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "macros", "parsing", "serde"] }
time-tz = "2"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread", "signal", "sync", "time"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
ureq = { version = "2", features = ["json"] }
tempfile = "3"
