[workspace]
members = ["crates/etv-station", "crates/etv-query-test", "crates/etv-overlay"]
exclude = ["etv-next"]
resolver = "3"

[workspace.dependencies]
ersatztv-playout = { path = "etv-next/crates/ersatztv-playout" }
etv-station = { path = "crates/etv-station" }
etv-overlay = { path = "crates/etv-overlay" }
anyhow = "1"
bytemuck = { version = "1", features = ["derive"] }
cel = { version = "0.13", features = ["json"] }
clap = { version = "4", features = ["derive"] }
glob = "0.3"
humantime-serde = "1"
nix = { version = "0.29", features = ["fs", "signal"] }
png = "0.17"
pollster = "0.4"
rhai = { version = "1.20", features = ["sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "macros", "parsing", "serde"] }
time-tz = "2"
tokio = { version = "1", features = ["fs", "macros", "process", "rt-multi-thread", "signal", "sync", "time"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
ureq = { version = "2", features = ["json"] }
tempfile = "3"
vello = "0.5"
wgpu = "24"
