[package]
name = "etv-overlay"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
bytemuck = { workspace = true }
clap = { workspace = true }
nix = { workspace = true }
png = { workspace = true }
pollster = { workspace = true }
rhai = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
vello = { workspace = true }
wgpu = { workspace = true }
parley = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[[bin]]
name = "etv-overlay"
path = "src/bin/etv-overlay.rs"

[lib]
path = "src/lib.rs"
