[package]
name = "etv-station"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { workspace = true }
ersatztv-playout = { workspace = true }
humantime-serde = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
time-tz = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lib]
name = "etv_station"
path = "src/lib.rs"

[[bin]]
name = "etv-station"
path = "src/main.rs"
